<resources>
    <string name="app_name">LoginDjango</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">Registrate</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="usuario_get_id">usuario_get_id</string>
    <string name="usuario_get_nombre">usuario_get_nombre</string>
    <string name="usuario_get_apellido">usuario_get_apellido</string>
    <string name="usuario_get_correo">usuario_get_correo</string>

</resources>
